# flaxfit

./: .gitignore  README.md  pyproject.toml
examples/: basic_fit_function.py  mnist_vae.py
flaxfit/: __init__.py  converters_and_functions.py  dataset.py  fitter.py  flax_fitter.py  flax_fitter_building_blocks.py  train_state.py  train_state_flax.py
flaxfit/callbacks/: call_sub_args.py  checkpointer.py  trigger_every_n_steps.py
flaxfit/logger/: logger.py  util.py
tests/: common.py  test_batch_converter.py  test_flax_train.py  test_flax_train_compare_nnx.py  test_flax_train_complex.py  test_metrics.py
